# agent-knowledge-boundary-contracts

./: .gitignore  Makefile  PROVENANCE.md  README.md  SECURITY.md  active_memory_boundary.py  knowledge_ingestion_contracts.py  pyproject.toml
.github/workflows/: ci.yml
evals/: agent-knowledge-boundary-contracts-eval-2026-07-15.md
fixtures/: active_memory_boundary_cases.json  ingestion_policy_cases.json
schemas/: active-memory-boundary.schema.json  ingestion-policy-bundle.schema.json  ingestion-receipt.schema.json
tests/: test_active_memory_boundary.py  test_ingestion_hardening.py  test_knowledge_ingestion_contracts.py
